# Email-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py  ping.py
database/migrations/: 001_initial_supabase.sql
email_assistant/: __init__.py  app.py  assistant.py  cli.py  config.py  exceptions.py  llm.py  models.py  postgres_storage.py  providers.py  security.py  storage.py  worker.py
scripts/: api.cmd  demo.cmd  setup.cmd  test.cmd
tests/: test_assistant.py  test_security.py  test_storage.py
